# speckit_ai_book

./: .gitignore  README.md  package-lock.json  package.json  pnpm-workspace.yaml  tasks.md
.claude/: settings.local.json
.specify/memory/: constitution.md
config/simulations/: simulation_config.json
docs/nav2-humanoid/: bipedal-navigation.md  index.md  localization.md  path-planning.md
examples/: comprehensive_simulation_example.py
examples/gazebo/: basic_physics_example.py  sensor_demo.py
examples/ros2_workspace/: CMakeLists.txt
examples/ros2_workspace/src/controller_node/: joint_subscriber.py  package.xml  setup.py
examples/ros2_workspace/src/controller_node/controller_node/: controller_node.py
examples/ros2_workspace/src/python_agent/: joint_publisher.py  package.xml  setup.py
examples/ros2_workspace/src/python_agent/python_agent/: agent_node.py
examples/unity_integration_demo/: unity_ros_demo.py
examples/urdf_models/: simple_humanoid.urdf
history/adr/: 001-frontend-technology-stack.md  002-development-workflow-tooling-approach.md  003-repository-structure-monorepo-approach.md  004-future-rag-architecture-educational-content.md
scripts/: test_simulation.py
site/: docusaurus.config.js  image-icon-checklist.md  package.json  sidebars.js  tasks-modern-ui.md  tasks.md
site/.claude/: settings.local.json
site/build-test/: 404.html  index.html  sitemap.xml
site/docs/: cross-module-references.md  cross-references.md  documentation-standards.md  features.md  intro.md  (+13 more)
tests/: integration_test.py  sensor_validation.py  simulation_tests.py
(+526 files in other folders)
